Fixed navbar link spacing

--- a/styles.css
+++ b/styles.css
@@ -39,10 +39,10 @@ nav {
 
 .nav-links{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     width: 25%;
-    margin-left: 10px;
+    gap: 2rem;
+    padding-left: 30px;
     list-style: none;
     text-decoration: none;
 }
@@ -407,6 +407,7 @@ button:hover {
         position: fixed;
         top: 0;
         left: 0;
+        width: 100vw!important;
     }
 
     .brand-logo {
@@ -514,10 +515,11 @@ padding: 0px;
         }
 
         .photos img {
-            height: 500px;
+            height: 50vh;
             object-fit: cover;
             position: relative;
             z-index: 0;
+            width: 100vw;
         }
 }
 
